WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53638
Number type input should not handle mouse wheel events if it has no focus.
https://bugs.webkit.org/show_bug.cgi?id=53638
Summary
Number type input should not handle mouse wheel events if it has no focus.
Kent Tamura
Reported
2011-02-02 16:14:37 PST
Number type input should not handle mouse wheel events if it has not focus.
Attachments
Patch
(3.62 KB, patch)
2011-02-02 16:17 PST
,
Kent Tamura
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kent Tamura
Comment 1
2011-02-02 16:17:30 PST
Created
attachment 80999
[details]
Patch
Kent Tamura
Comment 2
2011-02-28 17:40:54 PST
Landed:
http://trac.webkit.org/changeset/79951
WebKit Review Bot
Comment 3
2011-02-28 18:03:42 PST
http://trac.webkit.org/changeset/79951
might have broken SnowLeopard Intel Release (Build)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug