Number type input should not handle mouse wheel events if it has no focus. https://bugs.webkit.org/show_bug.cgi?id=53638

Reviewed by Darin Adler.

Source/WebCore:

* html/TextFieldInputType.cpp:
(WebCore::TextFieldInputType::handleWheelEventForSpinButton): Check focused().

LayoutTests:

Add a test case.

* fast/forms/input-number-wheel-expected.txt:
* fast/forms/script-tests/input-number-wheel.js:

Canonical link: https://commits.webkit.org/69848@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79951 268f45cc-cd09-0410-ab3c-d52691b4dbfc