LayoutTests/fast/forms/script-tests/input-number-wheel.js
@@ -1,7 +1,7 @@
 description('Test for wheel operations for &lt;input type=number>');
 var parent = document.createElement('div');
 document.body.appendChild(parent);
-parent.innerHTML = '<input type=number id=number value=0>';
+parent.innerHTML = '<input type=number id=number value=0> <input id=another>';
 var input = document.getElementById('number');
 input.focus();
 
@@ -39,5 +39,13 @@ debug('Read-only input element:');
 input.readOnly = true;
 dispatchWheelEvent(input, 0, 1);
 shouldBe('input.value', '"0"');
+input.readOnly = false;
+
+debug('No focus:');
+document.getElementById('another').focus();
+dispatchWheelEvent(input, 0, 1);
+shouldBe('input.value', '"0"');
+
+parent.parentNode.removeChild(parent);
 
 var successfullyParsed = true;
